# netcdf-explorer

./: .coverage  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  compose.yaml  package-lock.json  pyproject.toml  requirements.txt  routes.py  run_app.sh
.github/workflows/: run_tests.yml
conf/: netex.toml
src/netcdf_explorer/: app.py  config_parser.py  routes.py
src/netex/: app.py  config_parser.py  routes.py
src/netex/conf/: config_parser.py  config_parser_constants.py
static/src/: input.css
templates/: index.html  index.html.jinja  map.html.jinja  summary.html.jinja
tests/: conftest.py  constants.py
tests/conf/: .coveragerc  netex.toml
tests/data/configs/: invalid_config.toml  partial_config.toml  valid_config.toml
tests/integration/: conftest.py  landing_page_test.py  summary_page_test.py
tests/unit/: app_test.py  config_parser_test.py
