[project]
name = "netex"
version = "0.1.0"
description = "Allows users to upload and analyze NetCDF3 and NetCDF4 files."
requires-python = ">= 3.10"
dependencies = [
    "beautifulsoup4==4.14.2",
    "black>=25.12.0",
    "coverage==7.9.1",
    "flask==3.1.0",
    "humanize==4.12.3",
    "minio==7.2.20",
    "netcdf4==1.7.2",
    "path>=17.1.1",
    "pytest==8.4.2",
    "pytest-env==1.2.0",
    "pytest-flask==1.3.0",
    "pytest-mock==3.15.1",
    "scipy==1.15.3",
    "toml==0.10.2",
    "xarray==2025.4.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src", "tests", ]

[tool.pytest_env]
NETEX_CONFIG = "tests/conf/netex.toml"
